[package]
name = "quilt-latest"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.8", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
semver = { version = "1.0", features = ["serde"] }
